<resources>
    <string name="app_name">DinnerDeciderApp</string>
    <string name="add_food">Add Food</string>
    <string name="decide">Decide!</string>
    <string name="chinese">Chinese</string>
    <string name="enter_food_name">enter food name...</string>
    <string name="food_name">Enter food name</string>
    <string name="todo1">TODO1</string>
    <string name="food_name1">Enter_food_name</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>